# flutter_mimo

./: .gitignore  README.md  pubspec.yaml
.agents/rules/: core-design-principles.md  git-workflow.md  remote-server.md  ttd-workflow.md
.dart_tool/: package_config.json  package_graph.json
.dart_tool/dartpad/: web_plugin_registrant.dart
android/: gradle.properties
android/app/: build.gradle.kts
docs/: FSD_AI_Robot_Car_Companion_v2.0.docx.md  FSD_AI_Robot_Car_Companion_v2.1.docx.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: dashboard_screen.dart
lib/services/: foreground_service_manager.dart
lib/widgets/: bed_control.dart  camera_tilt_control.dart  car_companion_card.dart  control_wheel.dart  extruder_control.dart  speaker_control.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
mcp_backend/: .gitignore  README.md  patch_amqtt.py  pyproject.toml  test_client.py
mcp_backend/src/mcp_backend/: mqtt_client.py  server.py  tools.py
mcp_backend/tests/: test_idempotency.py  test_mqtt_client.py  test_server.py  test_tools.py
test/: widget_test.dart
test/screens/: dashboard_screen_test.dart
test/services/: foreground_service_test.dart  intent_service_test.dart  mqtt_service_test.dart
test/state/: tool_debug_state_test.dart
test/widgets/: bed_control_test.dart  camera_tilt_control_test.dart  control_wheel_test.dart  debug_tools_panel_test.dart  extruder_control_test.dart  (+2 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+19 files in other folders)
